committing work-in-progress

--- a/tardis-intro.html
+++ b/tardis-intro.html
@@ -21,8 +21,13 @@
         Markdown not loaded.
         </p>
         <p>
-        Try serving this locally, e.g., with<br />
+        If this is being served, try reloading (shift F5).
+        </p>
+        <p>
+        Otherwise, try serving this locally, e.g., with
+        <pre>
         python3 -m http.server --bind 127.0.0.1 4000
+        </pre>
         </p>
       </textarea>
 
