added TARDIS workflow cartoon

--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Galaxy TARDIS Introduction</title>
+    <title>Galaxy Temporal Archive Remote Distribution and Installation System</title>
   </head>
   <body>
     <h1>Galaxy TARDIS Introduction</h1>
+    <h2>Motivation: Administering a Local Galaxy with Minimal Stress</h2>
+    <p>Suppose that:</p>
+    <ul>
+      <li>You want to host a local instance of Galaxy.</li>
+      <li>You want to lose nothing if your Galaxy is swallowed by a black hole.</li>
+      <li>You want your backups to be efficient, easy to manage, secure, and offsite.</li>
+    </ul>
+    <p>Basically, you want to be able to travel (back) in time.</p>
+    <p>If your Galaxy has access to S3-based object storage, then the Galaxy "Temporal Archive Remote Distribution and Installation System" may be right for you.</p>
     <hr>
     <ul>
-      <li><a href="tardis-intro.html">Galaxy TARDIS Introduction slides</a></li>
+      <li><a href="tardis-intro.html">The Documentation: Galaxy TARDIS Introduction slides</a></li>
+      <li><a href="https://github.com/HegemanLab/galaxy-tardis">The Code: Galaxy TARDIS GitHub repository</a></li>
     </ul>
     <hr>
   </body>
